--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "mongoose": "^6.7.3"
+    "mongoose": "^6.7.3",
+    "morgan": "^1.10.0",
+    "validator": "^13.7.0",
+    "winston": "^3.8.2",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
